log
Thu 14 Sep 2023 02:22:19 PM UTC: 
 tests:  1|8
total_score: 0/70
c62c5f1
Thu 14 Sep 2023 11:57:34 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   41 |   if (map =NULL){
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
95d378e
Thu 14 Sep 2023 11:57:45 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
fb3cbe2
Fri 15 Sep 2023 12:03:39 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:5: error: expected identifier before ‘return’
   47 |     return NULL;
      |     ^~~~~~
treemap.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5f0c390
Fri 15 Sep 2023 12:04:49 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:19: error: ‘lt’ undeclared (first use in this function)
   44 |   map->lower_than=lt;
      |                   ^~
treemap.c:44:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
109f501
Fri 15 Sep 2023 12:08:30 AM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:23: error: ‘lt’ undeclared (first use in this function)
   48 |     map->lower_than = lt;
      |                       ^~
treemap.c:48:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: At top level:
treemap.c:56:5: error: expected identifier or ‘(’ before ‘return’
   56 |     return NULL;
      |     ^~~~~~
treemap.c:57:1: error: expected identifier or ‘(’ before ‘}’ token
   57 | }
      | ^
Compilation failed
ed394b8
